plugins {
    id 'java'
    id 'io.quarkus'
}

group = 'com.grpc.test'
version = '1.0.0'

repositories {
    mavenCentral()
    mavenLocal()
}

dependencies {
    implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
    implementation enforcedPlatform("${quarkusPlatformGroupId}:quarkus-camel-bom:${quarkusPlatformVersion}")

    implementation 'io.quarkus:quarkus-arc'

    implementation 'io.quarkus:quarkus-arc'
    implementation 'io.quarkus:quarkus-rest'
    implementation 'io.quarkus:quarkus-rest-jackson'

    implementation 'io.quarkus:quarkus-mutiny'
    implementation 'io.quarkus:quarkus-vertx'


    implementation 'org.apache.camel.quarkus:camel-quarkus-jackson-protobuf'
    implementation 'org.apache.camel.quarkus:camel-quarkus-protobuf'
    implementation 'org.apache.camel.quarkus:camel-quarkus-netty'
    implementation 'io.grpc:grpc-netty-shaded'
    implementation 'io.grpc:grpc-stub'
    implementation 'io.grpc:grpc-protobuf'

    implementation 'com.google.protobuf:protobuf-java-util'
    implementation "com.github.os72:protoc-jar:${protocJarVersion}"

    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"

    implementation 'org.hdrhistogram:HdrHistogram:2.1.12'

    testImplementation 'io.quarkus:quarkus-junit5'
    testImplementation 'io.rest-assured:rest-assured'
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

test {
    systemProperty "java.util.logging.manager", "org.jboss.logmanager.LogManager"
    jvmArgs "--add-opens", "java.base/java.lang=ALL-UNNAMED"
}
compileJava {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-parameters'
}

compileTestJava {
    options.encoding = 'UTF-8'
}
